[project]
name = "hakushin-py"
version = "0.4.11"
description = "Async API wrapper for hakush.in written in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.12.3",
    "aiohttp>=3.10.9",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "chompjs"
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/hakushin-py"
Repository = "https://github.com/seriaati/hakushin-py.git"
Issues = "https://github.com/seriaati/hakushin-py/issues"

[project.optional-dependencies]
docs = ["mkdocs-material[imaging]>=9.6.11", "mkdocstrings[python]>=0.29.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hakushin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"

[tool.uv]
dev-dependencies = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
