[project]
name = "hakushin-py"
version = "0.4.12"
description = "Async API wrapper for hakush.in written in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.12.3",
    "aiohttp>=3.10.9",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/hakushin-py"
Repository = "https://github.com/seriaati/hakushin-py.git"
Issues = "https://github.com/seriaati/hakushin-py/issues"

[dependency-groups]
docs = ["mkdocs-material[imaging]>=9.6.15", "mkdocstrings[python]>=0.29.1"]
test = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""
module-name = "hakushin"
